--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
      *             404/200 [] for none (depends on your API)
      */
     const API = {
-      baseUrl: "", // e.g. "https://api.yourdomain.com"
-      validatePath: "/api/auth/validate",
-      categoriesPath: "/api/budget/categories",
-      timeoutMs: 12000
-    };
+  baseUrl: "https://purrfect-budget-api.kardian.workers.dev",
+  validatePath: "/api/auth/validate",
+  categoriesPath: "/api/budget/categories",
+  timeoutMs: 12000
+};
+
 
     /**
      * IndexedDB settings
